syntax = "proto3";

package auth;
option go_package = "./pb";

message VerifyTokenRequest {
  string access_token = 1;
}

message VerifyTokenResponse {
  uint64 user_id = 1;
  bool is_expired = 2;
}

service AuthService {
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {};
}