syntax = "proto3";

package product;
option go_package = "./pb";

enum Status {
    STATUS_OK = 0;
    STATUS_NOT_FOUND = 1;
}

message ProductStatus {
    uint64 product_id = 1;
    int64 price = 2;
    Status status = 3;
}

message CartItem {
    uint64 product_id = 1;
    int64 amount = 2;
}

message CheckProductsRequest {
    repeated CartItem cart_items = 1;
}

message CheckProductsResponse {
    repeated ProductStatus product_statuses = 1;
}

message GetProductsRequest {
    repeated uint64 product_ids = 1;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message Product {
    uint64 product_id = 1;
    string product_name = 2;
    string description = 3;
    string brand_name = 4;
    int64 inventory = 5;
    int64 price = 6;
}

service ProductService {
    rpc CheckProducts(CheckProductsRequest) returns (CheckProductsResponse) {};
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {};
  }